<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:paddingHorizontal="@dimen/dimen_16dp"
    android:paddingVertical="8dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/button_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
        app:tint="@color/color_primary" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_close"
        tools:text="Snack" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_name"
        tools:text="$12.0" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_view"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginVertical="12dp"
        android:scaleType="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_amount"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize16Percent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_info_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_view"
        android:text="@string/text_info_title"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:textSize="14sp"
        android:textColor="@color/black_light"
        android:textStyle="bold"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_info_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_info_title"
        android:text="@string/text_info_description"
        android:textSize="12sp"
        android:textColor="@color/dark_grey"
        android:textStyle="bold"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_check_out"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginVertical="16dp"
        android:backgroundTint="@color/color_primary"
        android:text="@string/text_add_cart"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:cornerRadius="9dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_info_desc"
        tools:targetApi="lollipop" />


    </androidx.constraintlayout.widget.ConstraintLayout>
